--- a/assets/css/flex-post-list.css
+++ b/assets/css/flex-post-list.css
@@ -1,34 +1,44 @@
 /* hello */
 .flex {
-	display: flex;
-	flex-wrap:wrap;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-wrap:wrap;
+      -ms-flex-wrap:wrap;
+          flex-wrap:wrap;
 }
 
 .flex a {
-	padding:.3em;
-	color:white;
-	display:block;
-	background-color:grey;
+  padding:.3em;
+  color:white;
+  display:block;
+  background-color:grey;
 }
 
 .flex a:hover {
-	text-decoration: none;
-	background-color: #4d7c88;
+  text-decoration: none;
+  background-color: #4d7c88;
 }
 
 .flex a > img {
-	width: 100%;
-	border: none;
-	margin: 0px;
-	padding: 0px;
+  width: 100%;
+  border: none;
+  margin: 0px;
+  padding: 0px;
 }
 
 .flex a > h3 {
-	color: #d1d1d1;
+  color: #d1d1d1;
 }
 
+
+/* FIRST TRY STARTS HERE */
 .first-try {
-  justify-content:space-between;
+  -webkit-box-pack:justify;
+  -webkit-justify-content:space-between;
+      -ms-flex-pack:justify;
+          justify-content:space-between;
   
 }
 
@@ -65,3 +75,96 @@
     width: calc(100% / 3 - 8px);
   }
 }
+/* FIRST TRY ENDS HERE*/
+
+/* SECOND TRY STARTS HERE */
+
+.second-try.flex {
+  margin: -6px -6px inherit;
+}
+
+.second-try a {
+  margin: 6px;
+  min-width: 160px;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1 1 30%;
+      -ms-flex: 1 1 30%;
+          flex: 1 1 30%;
+}
+
+.second-try a:first-child {
+  -webkit-flex-basis: 100%;
+      -ms-flex-preferred-size: 100%;
+          flex-basis: 100%;
+}
+
+@media screen and (min-width:500px) {
+  .second-try a {
+    min-width:140px;
+  }
+
+  .second-try a:first-child, .second-try a:nth-child(2) {
+    -webkit-flex-basis: 45%;
+        -ms-flex-preferred-size: 45%;
+            flex-basis: 45%;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .second-try a{
+    -webkit-flex-basis: 20%;
+        -ms-flex-preferred-size: 20%;
+            flex-basis: 20%;
+  }
+
+  .second-try a:first-child, .second-try a:nth-child(2), .second-try a:nth-child(3) {
+    -webkit-flex-basis: 30%;
+        -ms-flex-preferred-size: 30%;
+            flex-basis: 30%;
+  }
+}
+
+/* END OF SECOND TRY */
+
+/* THIRD TRY STARTS HERE */
+
+.third-try.flex {
+  margin: -6px -6px inherit;
+}
+
+.third-try a {
+  margin: 6px;
+  width: 45%;
+  width: calc(50% - 12px);
+}
+
+.third-try a:first-child {
+  width: 98%;
+  width: calc(100% - 12px);
+}
+
+@media screen and (min-width:500px) {
+  .third-try a{
+    width: 30%;
+    width: calc(100%/3 - 12px);
+  }
+
+  .third-try a:first-child, .third-try a:nth-child(2) {
+    width: 45%;
+    width: calc(50% - 12px);
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .third-try a {
+    width: 20%;
+    width: calc(25% - 12px);
+  }
+
+  .third-try a:first-child, .third-try a:nth-child(2), .third-try a:nth-child(3) {
+    width: 30%;
+    width: calc(100%/3 - 12px);
+  }
+}
+
+/* END OF THIRD TRY */
